[package]
name = "cat-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
common-access-token = { git = "ssh://git@github.com/chrjoh/common-access-token.git" }
hex = "0.4.3"
hmac = "0.12.1"
httpmock = { version = "0.7.0" }
minicbor = "1.0.0"
mockall = "0.13.1"
reqwest = { version = "0.12.20", features = ["cookies"] }
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
